# sandforge

./: .gitignore  Cargo.toml  README.md  elements.yaml  levels.ron  materials.ron  materials.yaml  reactions.ron  temp.rust
assets/: Sprite-0001.aseprite  item_circle.aseprite  portal.aseprite  spritesheet.aseprite  structure.aseprite
assets/shaders/: fire.wgsl  light_apply.wgsl  light_calculate.wgsl  light_propagate.wgsl  particle.wgsl  post_processing.wgsl  primitive_shape.wgsl
benches/: benchmark.rs
diagrams/: 1.drawio  Untitled Diagram.drawio  animation.drawio  ca.drawio  class_diagram.drawio  component.drawio  dfd.drawio
src/: actor.rs  animation.rs  assets.rs  camera.rs  cell.rs  chunk.rs  constants.rs  cursor.rs  dirty_rect.rs  elements.rs  gui.rs  helpers.rs  input.rs  interpolator.rs  lib.rs  main.rs  materials.rs  painter.rs  particle.rs  pixel.rs  player.rs  raycast.rs  registries.rs  renderer.rs  settings.rs  state.rs  ui.rs  utils.rs  vector.rs  window.rs  world.rs
src/actors/: actor.rs  animation.rs  effects.rs  enemy.rs  health.rs  mod.rs  pathfinding.rs  player.rs
src/generation/: biome.rs  chunk.rs  level.rs  mod.rs  noise.rs  poisson.rs  populator.rs  structure.rs  tiles.rs
src/postprocessing/: copy.rs  light_apply.rs  light_calculate.rs  light_propagate.rs  mod.rs
src/shaders/: collider.wgsl  downsample.wgsl  mask.wgsl  particle.wgsl  shader.wgsl  texture.wgsl
src/sim/: cell.rs  chunk.rs  colliders.rs  elements.rs  helpers.rs  mod.rs  objects.rs  particle.rs  physics.rs  renderer.rs  world.rs
src/simulation/: chunk.rs  chunk_groups.rs  chunk_manager.rs  colliders.rs  dirty_rect.rs  materials.rs  mesh.rs  mod.rs  object.rs  particle.rs  pixel.rs  world.rs
